--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -1,62 +1,28 @@
-{% extends 'base.html' %} {% load static %} {% block content%}
+{% extends 'base.html' %}
+{% block content%}
+
 <body>
+
+  {% include  'banner.html' %}
+  {% load static %}
   <section id="create-playlist">
     <h1>Create playlist</h1>
     <div class="container">
       <div class="input-container">
-        <input
-          id="search-input"
-          type="text"
-          name="text"
-          class="input"
-          placeholder="search..."
-        />
+        <input id="search-input" type="text" name="text" class="input" placeholder="search..." />
         <span class="icon">
-          <svg
-            width="19px"
-            height="19px"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+          <svg width="19px" height="19px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g
-              id="SVGRepo_tracerCarrier"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            ></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
             <g id="SVGRepo_iconCarrier">
-              <path
-                opacity="1"
-                d="M14 5H20"
-                stroke="#000"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-              <path
-                opacity="1"
-                d="M14 8H17"
-                stroke="#000"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-              <path
-                d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2"
-                stroke="#000"
-                stroke-width="2.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-              <path
-                opacity="1"
-                d="M22 22L20 20"
-                stroke="#000"
-                stroke-width="3.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
+              <path opacity="1" d="M14 5H20" stroke="#000" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round"></path>
+              <path opacity="1" d="M14 8H17" stroke="#000" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round"></path>
+              <path d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2" stroke="#000"
+                stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path opacity="1" d="M22 22L20 20" stroke="#000" stroke-width="3.5" stroke-linecap="round"
+                stroke-linejoin="round"></path>
             </g>
           </svg>
         </span>
@@ -83,7 +49,7 @@
       </button>
     </div>
   </section>
-
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static '/js/scroll-to-create.js' %}" defer></script>
 </body>
 {% endblock %}
