--- a/DjangoPlaylisty/templates/home.html
+++ b/DjangoPlaylisty/templates/home.html
@@ -1,32 +1,8 @@
-{% extends 'base.html' %} {% load static %} {% block content%}
-
+{% extends 'base.html' %}
+{% block content%}
 <body>
-  <section id="banner">
-    <div>
-      <h1 class="Listify_tittle">Playlisty</h1>
-      <h2>Create and Custom</h2>
-      <h1>
-        <span class="spotify">Spotify </span
-        ><span class="playlists">Playlists</span>
-      </h1>
-    </div>
-    <div
-      class="bg"
-      style="background-image: url('{% static 'svg/bg.svg' %}')"
-    ></div>
-    {% if logged_in == False %}
-    <a href="#login-to-start" class="loader"></a>
-    {% else %}
-      <a href="#create-playlist" class="loader"></a>
-
-    {% endif %}
-
-  </section>
-  {% if logged_in == False %}
-   {% include 'login_to_start.html' %}
-  {%else %}
-   {% include 'create_playlist.html' %}
-  {%endif %}
+  {% include 'banner.html' %}
+  {% include 'login_to_start.html' %}
 </body>
 <script>
   function scrollToElement(selector) {
