--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -358,7 +358,7 @@ h3 {
 #playlist-section .playlist-container li .left {
     font-size: 15px;
     display: grid;
-    grid-template-columns: 0.2fr 0.2fr 2fr;
+    grid-template-columns: 0.2fr 2fr;
     align-items: center;
     gap: 18px;
 }
@@ -399,8 +399,63 @@ h3 {
     display: flex;
     justify-content: right;
     width: auto;
+    gap: 18px;
 }
-
+.button {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    background-color: rgb(57, 57, 57);
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .svgIcon {
+    width: 12px;
+    transition-duration: .3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .button:hover {
+    width: 140px;
+    border-radius: 5px;
+    transition-duration: .3s;
+    background-color: rgb(255, 69, 69);
+    align-items: center;
+  }
+  
+  .button:hover .svgIcon {
+    width: 50px;
+    transition-duration: .3s;
+    transform: translateY(60%);
+  }
+  
+  .button::before {
+    position: absolute;
+    top: -20px;
+    content: "Delete";
+    color: white;
+    transition-duration: .3s;
+    font-size: 2px;
+  }
+  
+  .button:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    transform: translateY(30px);
+    transition-duration: .3s;
+  }
 #playlist-section .playlist-container li div select {
     text-align: center;
     cursor: pointer;
@@ -429,7 +484,7 @@ h3 {
     align-items: center;
     justify-content: center;
 }
-
+  
 
 
 @media (max-width: 1024px) {
