--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -353,8 +353,13 @@ h3 {
     margin: 0 10px;
     align-items: center;
     gap: 15px;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
 }
 
+#playlist-section .playlist-container li.show{
+    opacity: 1;
+}
 #playlist-section .playlist-container li .left {
     font-size: 15px;
     display: grid;
