--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -253,8 +253,6 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding-bottom: 1rem;
-    gap: 1rem;
 }
 
 .results-container {
@@ -263,7 +261,9 @@ h3 {
     height: 5rem;
     align-items: center;
     width: 95%;
-    height: 10rem;
+    height: 12rem;
+    min-height: auto;
+    padding: 2rem 0;
     max-width: 50rem;
     align-items: center;
     justify-content: center;
