--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -261,8 +261,8 @@ h3 {
     height: 5rem;
     align-items: center;
     width: 95%;
-    height: 12rem;
-    min-height: auto;
+    height: auto;
+    min-height: 12rem;
     padding: 2rem 0;
     max-width: 50rem;
     align-items: center;
