Change create palylist design

--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -3,7 +3,6 @@
 
 <body>
 
-  {% include  'banner.html' %}
   {% load static %}
   <section id="create-playlist">
     <h1>Create playlist</h1>
@@ -38,7 +37,8 @@
       </ul>
     </div>
   </section>
-
+  <section class="curved"></section>
+  <section class="curved2"></section>
   <section id="playlist-section">
     <h1>Your playlist</h1>
     <ul class="playlist-container">
