--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -46,6 +46,7 @@
     text-wrap: nowrap;
     white-space: nowrap;
 }
+
 .create-playlist-link {
     z-index: 199;
     color: #CA8DF2;
@@ -200,6 +201,9 @@
     margin: 2rem;
     text-align: center;
 }
+#create-playlist h1{
+    color: white;
+}
 
 #login-to-start form .fancy-button {
     margin: 4rem 0;
@@ -232,6 +236,7 @@
 
 #create-playlist .container select {
     height: clamp(40px, 5vw, 50px);
+    width: auto;
     padding: 10px;
     transition: .2s linear;
     border: 2.5px solid rgb(19, 16, 16);
@@ -253,6 +258,7 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    background-color: #0084EC;
 }
 
 .results-container {
@@ -296,7 +302,7 @@ h3 {
 #create-playlist .results-container li {
     border-radius: 18px;
     height: 50px;
-    background-color: lightgray;
+    background-color: #E2F0FF;
     padding: 8px;
     margin: 5px;
     cursor: pointer;
@@ -318,9 +324,31 @@ h3 {
     height: 40px;
     border-radius: 50%;
 }
+.curved {
+    position: relative;
+    background: #0084EC;
+    height: 8vh;
+    border-bottom-left-radius: 50% 21%;
+    border-bottom-right-radius: 50% 21%;
+}
 
+.curved2 {
+    position: relative;
+    background: white;
+    height: 8vh;
+}
+
+.curved2::after {
+    content: '';
+    border-top-left-radius: 50% 100%;
+    border-top-right-radius: 50% 100%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: black;
+    height: 20%;
+}
 #playlist-section {
-    height: 100vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -328,7 +356,8 @@ h3 {
     align-items: center;
     justify-content: space-between;
     margin: 0;
-    height: auto;
+    min-height: 30rem;
+    height: 60vh;
     padding-bottom: 2rem;
     background-image: linear-gradient(to bottom, black, #393939);
 }
@@ -343,7 +372,9 @@ h3 {
     width: min(50rem, 100%);
     gap: 5px;
     overflow-y: auto;
-    height: 10rem;
+    min-height: 10rem;
+    justify-content: flex-start;
+    height: 70%;
 }
 
 #playlist-section .playlist-container li {
@@ -357,9 +388,10 @@ h3 {
     transition: opacity 0.4s ease-in-out;
 }
 
-#playlist-section .playlist-container li.show{
+#playlist-section .playlist-container li.show {
     opacity: 1;
 }
+
 #playlist-section .playlist-container li .left {
     font-size: 15px;
     display: grid;
@@ -404,10 +436,12 @@ h3 {
     display: flex;
     justify-content: right;
     width: auto;
-    gap: 18px;
+    gap: 1rem;
 }
+
 .button {
-    width: 50px;
+    width: 20%;
+    min-width: 50px;
     height: 50px;
     border-radius: 5px;
     background-color: rgb(57, 57, 57);
@@ -421,46 +455,47 @@ h3 {
     transition-duration: .3s;
     overflow: hidden;
     position: relative;
-  }
-  
-  .svgIcon {
+}
+
+.svgIcon {
     width: 12px;
     transition-duration: .3s;
-  }
-  
-  .svgIcon path {
+}
+
+.svgIcon path {
     fill: white;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
     width: 140px;
     border-radius: 5px;
     transition-duration: .3s;
     background-color: rgb(255, 69, 69);
     align-items: center;
-  }
-  
-  .button:hover .svgIcon {
+}
+
+.button:hover .svgIcon {
     width: 50px;
     transition-duration: .3s;
     transform: translateY(60%);
-  }
-  
-  .button::before {
+}
+
+.button::before {
     position: absolute;
     top: -20px;
     content: "Delete";
     color: white;
     transition-duration: .3s;
     font-size: 2px;
-  }
-  
-  .button:hover::before {
+}
+
+.button:hover::before {
     font-size: 13px;
     opacity: 1;
     transform: translateY(30px);
     transition-duration: .3s;
-  }
+}
+
 #playlist-section .playlist-container li div select {
     text-align: center;
     cursor: pointer;
@@ -471,6 +506,7 @@ h3 {
     height: 50px;
     font-size: clamp(1rem, 2vw, 1.3rem);
     width: 80%;
+    min-width: 70px;
     border-radius: 5px;
 }
 
@@ -489,7 +525,7 @@ h3 {
     align-items: center;
     justify-content: center;
 }
-  
+
 
 
 @media (max-width: 1024px) {
@@ -507,11 +543,12 @@ h3 {
     }
 }
 
+
 @media (max-width: 768px) {
     .results-container {
+        min-height: 0;
         opacity: 0;
         transition: 0.4s opacity ease-in-out;
-        height: auto;
         align-items: center;
         width: 95%;
         max-width: 50rem;
@@ -535,7 +572,6 @@ h3 {
     #create-playlist .results-container li {
         height: 50px;
         border-radius: 0;
-        background-color: lightgray;
         padding: 8px;
         margin: 5px;
         cursor: pointer;
