Change home design

--- a/DjangoPlaylisty/templates/banner.html
+++ b/DjangoPlaylisty/templates/banner.html
@@ -8,6 +8,17 @@
         </h1>
     </div>
     <div class="bg" style="background-image: url('{% static 'svg/bg.svg' %}')"></div>
-    <a class="loader"></a>
-
+    {%if logged_in == False %}
+    <form action="{% url 'auth' %}">
+      <button class="fancy-button" type="submit">
+        <span class="button_top"> Log In with Spotify</span>
+      </button>
+    </form>
+    {% else %}
+    <form action="{% url 'createplaylist' %}">
+        <button class="fancy-button" type="submit">
+          <span class="button_top"> Create playlist</span>
+        </button>
+      </form>
+    {% endif %}
 </section>
