--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -114,8 +114,13 @@
 }
 
 /* ------------HOME------------ */
-#banner {
-    height: 100vh;
+
+#banner  {
+    position: relative;
+    background: #0084EC;
+    height: 50vh;
+    border-bottom-left-radius: 50% 30%;
+    border-bottom-right-radius: 50% 30%;
     min-height: 600px;
     display: flex;
     justify-content: center;
@@ -125,20 +130,9 @@
     background-color: white;
     flex-direction: column;
     padding-bottom: 100px;
-}
-
-#banner .bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    min-height: 600px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 1;
-}
+    position: relative;
+    background-color: #0084EC;
+  }
 
 #banner h1 {
     color: white;
@@ -530,6 +524,11 @@ h3 {
 
 @media (max-width: 1024px) {
 
+    #banner {
+        height: 100vh;
+        border-bottom-left-radius: 50% 5%;
+        border-bottom-right-radius: 50% 5%;
+    }
     #login-to-start .text-container {
         line-height: 2.2rem;
         width: 100%;
