--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -1,29 +1,35 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Playlisty -Generate Playlists</title>
-    <link rel="stylesheet" href="{% static 'styles/global.css'%}" />
-    <link rel="stylesheet" href="{% static 'styles/main.css'%}" />
-    <link rel="icon" href="{% static 'img/Spotify_logo.png'%}" />
-    <script
-      src="https://kit.fontawesome.com/b97263830a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  {% csrf_token %}
-  <body>
-    {% block content%} 
-    {% endblock %}
-  </body>
-  <footer class="footer">
-    <div class="container">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Playlisty -Generate Playlists</title>
+  <link rel="stylesheet" href="{% static 'styles/global.css'%}" />
+  <link rel="stylesheet" href="{% static 'styles/main.css'%}" />
+  <link rel="icon" href="{% static 'img/Spotify_logo.png'%}" />
+  <script src="https://kit.fontawesome.com/b97263830a.js" crossorigin="anonymous"></script>
+</head>
+{% csrf_token %}
+
+<body>
+  {% block content%}
+  {% endblock %}
+</body>
+<footer class="footer">
+  <div class="container">
+    <aside>
+      <a href="/">Home</a>
+      <a href="/createplaylist">Create playlist</a>
+      <a href="/whylogin">Why do you have to log in?</a>
+    </aside>
+    <aside>
       <p class="footer-text">© 2023 Playlisty. Todos los derechos reservados.</p>
       <p class="footer-text">Contact: osoyinas@gmail.com</p>
-    </div>
-  </footer>
-  
+    </aside>
+  </div>
+</footer>
+
 </html>
