--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -33,6 +33,7 @@
     <ul>
     </ul>
   </div>
+  <h2 class="display-results">Search to display results!</h2>
 </section>
 <section class="curved"></section>
 <section class="curved2"></section>
