--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -41,6 +41,7 @@
   <h1>Your playlist</h1>
   <ul class="playlist-container">
   </ul>
+  <h2 class="playlist-empty">Your playlist is empty</h2>
   <div id="button-container">
     <button id="generate-playlist-button" class="fancy-button">
       Generate playlist
