--- a/DjangoPlaylisty/templates/why_log_in.html
+++ b/DjangoPlaylisty/templates/why_log_in.html
@@ -30,20 +30,23 @@
       data.
     </p>
     <p>
-      By logging in with your Spotify account, you enable our web app to
-      leverage the vast music library and features offered by Spotify. This
-      allows us to curate playlists tailored to your musical preferences,
-      considering your listening history, favorite artists, and genre
-      preferences. The result is a personalized playlist experience that
-      caters to your unique taste in music.
-    </p>
-    <p>
       We value your trust and understand the importance of transparency when
       it comes to handling user data. Rest assured that we abide by Spotify's
       terms of service and privacy policy, and we take all necessary
       precautions to ensure your privacy and security throughout your
       interaction with our web app.
     </p>
+    <h2>Web apps that uses Spotify's API as this one</h2>
+    <a href="https://www.statsforspotify.com/">https://www.statsforspotify.com/</a>
+    <br>
+    <a href="https://www.spotlistr.com/">https://www.spotlistr.com/</a>
+    <br>
+    <a href="https://www.chosic.com/playlist-generator/">https://www.chosic.com/playlist-generator/</a>
+    <br>
+    <a href="https://create.magicplaylist.co/">https://create.magicplaylist.co/</a>
+    <br>
+
+    
   </div>
 </section>
 </body>
