Change footer cr

--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -26,7 +26,7 @@
       <a href="/whylogin">Why do you have to log in?</a>
     </aside>
     <aside>
-      <p class="footer-text">© 2023 Playlisty. Todos los derechos reservados.</p>
+      <p class="footer-text">© 2023 Playlisty</p>
       <p class="footer-text">Contact: osoyinas@gmail.com</p>
     </aside>
   </div>
