Add logo to banner and fix delete button

--- a/DjangoPlaylisty/templates/banner.html
+++ b/DjangoPlaylisty/templates/banner.html
@@ -21,5 +21,8 @@
     </button>
   </form>
   {% endif %}
-  <img id="logo" src="{% static 'img/Spotify_logo.png' %}" alt="">
+  
+
+    <img class="spotify-logo" src="{% static 'svg/spotify_logo.png' %}" alt="">
+
 </section>
