--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -143,7 +143,7 @@
     padding-top: 2rem;
     z-index: 10;
 }
-#banner #logo {
+.spotify-logo {
     position: absolute;
     right: 0;
     top: 0;
@@ -525,7 +525,6 @@ h3 {
 }
 
 .button:hover {
-    width: 140px;
     border-radius: 5px;
     transition-duration: .3s;
     background-color: rgb(255, 69, 69);
