--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -48,5 +48,5 @@
     </button>
   </div>
 </section>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/create-playlist.js' %}"></script>
 {% endblock %}
