Add links to items

--- a/DjangoPlaylisty/templates/banner.html
+++ b/DjangoPlaylisty/templates/banner.html
@@ -8,21 +8,13 @@
     </h1>
   </div>
   <div class="bg" style="background-image: url('{% static 'svg/bg.svg' %}')"></div>
-  {%if logged_in == False %}
-  <form action="{% url 'auth' %}">
-    <button class="fancy-button" type="submit">
-      <span class="button_top">Log In with Spotify</span>
-    </button>
-  </form>
-  {% else %}
-  <form action="{% url 'createplaylist' %}">
-    <button class="fancy-button" type="submit">
-      <span class="button_top">Create playlist</span>
-    </button>
-  </form>
-  {% endif %}
-  
+  <div class="arrow">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
-    <img class="spotify-logo" src="{% static 'svg/spotify_logo.png' %}" alt="">
+
+  <img class="spotify-logo" src="{% static 'svg/spotify_logo.png' %}" alt="">
 
 </section>
