--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -9,7 +9,7 @@
   <title>Playlisty -Generate Playlists</title>
   <link rel="stylesheet" href="{% static 'styles/global.css'%}" />
   <link rel="stylesheet" href="{% static 'styles/main.css'%}" />
-  <link rel="icon" href="{% static 'img/Spotify_logo.png'%}" />
+  <link rel="icon" href="{% static 'svg/spotify_logo.png'%}" />
 </head>
 {% csrf_token %}
 
