--- a/DjangoPlaylisty/templates/custom_playlist.html
+++ b/DjangoPlaylisty/templates/custom_playlist.html
@@ -3,15 +3,15 @@
 {% load static %}
 <section id="top-custom-playlist">
     <h1>Create playlist</h1>
+    <div class="input-container">
+        <input id="search-input" type="text" name="text" class="input" placeholder="Playlist name" />
+    </div>
 </section>
 <section class="curved"></section>
 <section class="curved2"></section>
 <section id="custom-playlist">
 
     <section id="custom-playlist">
-        <div class="input-container">
-            <input id="search-input" type="text" name="text" class="input" placeholder="Playlist name" />
-        </div>
         <main class="playlist-container">
             {% for item in data %}
             <li id-value="{{ item.id }}" class="show">
@@ -20,7 +20,9 @@
                     <img src={{item.album.images.0.url}} alt="">
                     <div class="name-type-container">
                         <p class="name">{{ item.name }}</p>
-                        <p class="type">{{ item.artists.0.name }}</p>
+                        <p class="type"> {% for artist in item.artists %}
+                            {{ artist.name }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}</p>
                     </div>
                 </div>
                 <div class="right">
@@ -31,7 +33,8 @@
                             </path>
                         </svg>
                     </button>
-                    <img class="right-icon" src="/static/svg/spotify_logo.png" alt="">
+                    <a class="right-icon" href="{{item.external_urls.spotify}}" target="_blank" rel="noreferrer noopener"><img src="/static/svg/Spotify_Icon_RGB_White.png" alt=""></a>
+                    
                 </div>
             </li>
             {% endfor %}
