--- a/DjangoPlaylisty/templates/banner.html
+++ b/DjangoPlaylisty/templates/banner.html
@@ -15,6 +15,6 @@
   </div>
 
 
-  <img class="spotify-logo" src="{% static 'svg/spotify_logo.png' %}" alt="">
+  <img class="spotify-logo" src="{% static 'svg/Spotify_Logo_RGB_White.png' %}" alt="">
 
 </section>
