--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -48,5 +48,6 @@
     </button>
   </div>
 </section>
+<section class="curved black"></section>
 <script src="{% static 'js/create-playlist.js' %}"></script>
 {% endblock %}
