--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -150,14 +150,17 @@
         opacity: 0;
         transform: rotate(45deg) translate(-20px, -20px);
     }
+
     50% {
         opacity: 1;
     }
+
     100% {
         opacity: 0;
         transform: rotate(45deg) translate(20px, 20px);
     }
 }
+
 /* ------------HOME------------ */
 
 #banner {
@@ -188,6 +191,7 @@
     padding-top: 2rem;
     z-index: 10;
 }
+
 .spotify-logo {
     position: absolute;
     right: 0;
@@ -198,6 +202,7 @@
     height: auto;
     margin: 2.5rem;
 }
+
 #banner .Listify_tittle {
     font-size: clamp(4em, 10vw, 9em);
 }
@@ -235,10 +240,11 @@
     background-color: #000;
     color: #fff;
     width: 100%;
-    height: 15rem;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 3rem 1rem;
 }
 
 .footer a {
@@ -246,24 +252,34 @@
 }
 
 .footer .container {
-    padding: 1.5rem;
     width: min(50rem, 100%);
     display: flex;
     justify-content: space-between;
-    gap: 40px;
+    gap: 4rem;
     line-height: 2rem;
+    flex-wrap: wrap;
 }
+
 .footer .container aside {
     display: flex;
     flex-direction: column;
-    line-height: 1rem;
-    gap: 1rem;
+    line-height: 2rem;
+    width: 8rem;
 }
+
 .footer .container aside a {
     cursor: pointer;
+    font-size: 90%
 }
+
+.footer-tittle {
+    text-transform: uppercase;
+    font-weight: 600;
+    opacity: 60%;
+}
+
 .footer-text {
-    margin: 5px 0;
+    font-size: 90%;
 }
 
 /* GENERATE PLAYLIST NOT LOGGED IN  */
@@ -286,9 +302,11 @@
     margin: 2rem;
     text-align: center;
 }
+
 #login-to-start a {
     font-size: 1.5rem;
 }
+
 #create-playlist h1 {
     color: white;
 }
@@ -309,14 +327,17 @@
     width: 100%;
     /* text-align: justify; */
 }
+
 #login-to-start h2 {
     font-size: 2rem;
     text-align: center;
     margin: 1rem 0;
 }
+
 #login-to-start .fancy-button {
-    margin-bottom: 0.5rem !important; 
+    margin-bottom: 0.5rem !important;
 }
+
 /* CREATE PLAYLIST */
 #create-playlist .container {
     display: grid;
@@ -377,9 +398,11 @@ h3 {
     bottom: 20%;
     transition: opacity 0.4s ease-in-out;
 }
+
 .display-results.hide {
     opacity: 0 !important;
 }
+
 .results-container.show {
     opacity: 1;
 }
@@ -438,7 +461,7 @@ h3 {
     border-bottom-right-radius: 50% 21%;
 }
 
-.curved.black{
+.curved.black {
     background: black;
     margin-bottom: 5rem;
 }
@@ -511,9 +534,11 @@ h3 {
     align-items: center;
     gap: 18px;
 }
+
 #playlist-section .playlist-container li .left {
     grid-template-columns: 0.2fr 2fr;
 }
+
 .name-type-container {
     width: 100%;
     overflow: hidden;
@@ -636,17 +661,19 @@ h3 {
     justify-content: center;
 }
 
-.playlist-empty{
+.playlist-empty {
     color: white;
     opacity: 0.4;
     position: absolute;
     bottom: 65%;
     transition: opacity 0.4s ease-in-out;
 }
+
 .playlist-empty.hide {
     opacity: 0;
 
 }
+
 .right-icon {
     display: flex;
     justify-content: center;
@@ -662,7 +689,7 @@ h3 {
     height: 10vw;
 }
 
-#top-custom-playlist{
+#top-custom-playlist {
     height: auto;
     height: auto;
     width: 100%;
@@ -673,9 +700,11 @@ h3 {
     background-color: #0084EC;
     position: relative;
 }
+
 #top-custom-playlist h1 {
     color: white;
 }
+
 #custom-playlist {
     display: flex;
     flex-direction: column;
@@ -685,16 +714,19 @@ h3 {
     justify-content: space-around;
     width: 100%;
 }
- main {
+
+main {
     width: 100%;
 }
 
 #custom-playlist .playlist-container li .left {
     grid-template-columns: 0.2fr 0.2fr 6fr;
 }
+
 .arrow {
     opacity: 0;
 }
+
 @media (max-width: 1024px) {
 
     #banner {
@@ -702,6 +734,7 @@ h3 {
         border-bottom-left-radius: 50% 5%;
         border-bottom-right-radius: 50% 5%;
     }
+
     .arrow {
         display: block;
         opacity: 1;
