--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -20,13 +20,22 @@
 <footer class="footer">
   <div class="container">
     <aside>
+      <p class="footer-tittle">LINKS</p>
       <a href="/">Home</a>
       <a href="/createplaylist">Create playlist</a>
       <a href="/whylogin">Why do you have to log in?</a>
     </aside>
     <aside>
+      <p class="footer-tittle">INFO</p>
       <p class="footer-text">© 2023 Playlisty</p>
-      <p class="footer-text">Contact: osoyinas@gmail.com</p>
+      <p class="footer-text">App designed for Spotify</p>      
+    </aside>
+    <aside>
+      <p class="footer-tittle">CONTACT</p>
+      <a href="mailto:osoyinas@gmail.com">osoyinas@gmail.com</a>
+      <a href="https://t.me/osoyinas">Telegram</a>
+      <a href="https://github.com/osoyinas">Github</a>
+      <a href="www.linkedin.com/in/osoyinas">Linkedin</a>     
     </aside>
   </div>
 </footer>
