--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -19,9 +19,20 @@
 
 .fancy-button:hover {
     letter-spacing: 3px;
-    background-color: hsl(261deg 80% 48%);
-    color: hsl(0, 0%, 100%);
-    box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
+    background-color: #0084EC;
+    color: white;
+    box-shadow: #0084EC 0px 7px 29px 0px;
+}
+
+
+.fancy-button:hover .button_top {
+    /* Pull the button upwards when hovered */
+    transform: translateY(-0.33em);
+}
+
+.fancy-button:active .button_top {
+    /* Push the button downwards when pressed */
+    transform: translateY(0);
 }
 
 .logged-in-box {
@@ -53,25 +64,10 @@
     text-decoration: underline;
 }
 
-.fancy-button:active {
-    letter-spacing: 3px;
-    background-color: hsl(261deg 80% 48%);
-    color: hsl(0, 0%, 100%);
-    box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
-    transform: translateY(10px);
-    transition: 100ms;
+.button_top {
+    color: inherit;
 }
 
-
-.fancy-button:hover .button_top {
-    /* Pull the button upwards when hovered */
-    transform: translateY(-0.33em);
-}
-
-.fancy-button:active .button_top {
-    /* Push the button downwards when pressed */
-    transform: translateY(0);
-}
 
 /* Inputs */
 .input-container {
@@ -293,6 +289,17 @@
     margin-bottom: 10rem;
 }
 
+#login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#login-form a {
+    text-decoration: underline;
+}
+
 #login-to-start h1,
 #create-playlist h1,
 #playlist-section h1,
@@ -303,9 +310,6 @@
     text-align: center;
 }
 
-#login-to-start a {
-    font-size: 1.5rem;
-}
 
 #create-playlist h1 {
     color: white;
@@ -720,7 +724,7 @@ main {
 }
 
 #custom-playlist .playlist-container li .left {
-    grid-template-columns: 0.2fr 0.2fr 6fr;
+    grid-template-columns: 0.2fr 6fr;
 }
 
 .arrow {
