--- a/DjangoPlaylisty/templates/custom_playlist.html
+++ b/DjangoPlaylisty/templates/custom_playlist.html
@@ -16,7 +16,6 @@
             {% for item in data %}
             <li id-value="{{ item.id }}" class="show">
                 <div class="left">
-                    <h2>{{ forloop.counter }}</h2>
                     <img src={{item.album.images.0.url}} alt="">
                     <div class="name-type-container">
                         <p class="name">{{ item.name }}</p>
@@ -33,8 +32,10 @@
                             </path>
                         </svg>
                     </button>
-                    <a class="right-icon" href="{{item.external_urls.spotify}}" target="_blank" rel="noreferrer noopener"><img alt="{{item.name}} on Spotify" src="/static/svg/Spotify_Icon_RGB_White.png" alt=""></a>
-                    
+                    <a class="right-icon" href="{{item.external_urls.spotify}}" target="_blank"
+                        rel="noreferrer noopener"><img alt="{{item.name}} on Spotify"
+                            src="/static/svg/Spotify_Icon_RGB_White.png" alt=""></a>
+
                 </div>
             </li>
             {% endfor %}
