--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -2,7 +2,7 @@
 .fancy-button {
     z-index: 100;
     padding: 10px 20px;
-    border: 1px solid black;
+    border: 2.5px solid black;
     background-color: white;
     box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
     letter-spacing: 2px;
@@ -158,6 +158,10 @@
 }
 
 /* ------------HOME------------ */
+
+body {
+    background-color: #E6F4F1;
+}
 
 #banner {
     position: relative;
@@ -492,18 +496,46 @@ h3 {
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
     align-items: center;
-    justify-content: space-between;
-    margin: 0;
     min-height: 30rem;
     height: 50vh;
-    padding-bottom: 2rem;
-    background-image: linear-gradient(to top, black, #414756);
+    margin: 4rem 0;
+    padding: 0 1rem;
 }
 
 #playlist-section h1 {
     color: white;
+}
+
+.header-container {
+    display: grid;
+    width: min(50rem, 100%);
+    min-height: auto;
+    grid-template-columns: 2fr 1fr;
+    margin: 1rem 0;
+}
+
+.header-container aside {
+    display: flex;
+    justify-content: flex-start;
+    gap: 1rem;
+}
+
+.header-container aside .info-box {
+    border: 2.5px solid black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    height: clamp(60px, 5vw, 60px);
+    padding: 1rem;
+    min-width: 5.5rem;
+}
+
+.header-container aside h3 {
+    margin: 0;
+    font-size: 90%;
+    font-weight: 300;
 }
 
 .playlist-container {
@@ -511,17 +543,42 @@ h3 {
     flex-direction: column;
     width: min(50rem, 100%);
     gap: 5px;
-    overflow-y: auto;
-    min-height: 10rem;
+    overflow-y: scroll;
     justify-content: flex-start;
-    height: 70%;
+    height: auto;
+    min-height: 83px;
+    background-color: white;
+    padding: 1rem;
+    transition: height 0.2s ease-in-out;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+}
+
+#generate-playlist-button {
+    border: 0;
+    background-color: #04D94F;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+}
+
+/* Estilos para el scroll */
+.playlist-container::-webkit-scrollbar {
+    width: 8px;
+    /* Ancho del scroll */
+}
+
+
+.playlist-container::-webkit-scrollbar-thumb {
+    background-color: black;
+}
+
+.playlist-container::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+    /* Color del thumb al pasar el cursor */
 }
 
 .playlist-container li {
     display: grid;
     grid-template-columns: 1.5fr 1fr;
-    color: white;
-    margin: 0 10px;
+    color: black;
     align-items: center;
     gap: 15px;
     opacity: 0;
@@ -548,7 +605,6 @@ h3 {
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: clamp(1rem, 2vw, 1.3rem);
-
 }
 
 .playlist-container li .left h2 {
@@ -584,7 +640,7 @@ h3 {
     min-width: 50px;
     height: 50px;
     border-radius: 5px;
-    background-color: #57586D;
+    background-color: black;
     border: none;
     font-weight: 600;
     display: flex;
@@ -639,7 +695,7 @@ h3 {
     text-align: center;
     cursor: pointer;
     color: white;
-    background-color: #57586D;
+    background-color: black;
     outline: none;
     border: white;
     height: 50px;
@@ -686,11 +742,11 @@ h3 {
 
 .right-icon img {
     max-width: 40px;
+    min-width: 5px;
     max-height: 40px;
-    min-height: 24px;
-    min-width: 24px;
-    width: 10vw;
-    height: 10vw;
+    min-height: 5px;
+    width: 8vw;
+    height: 8vw;
 }
 
 #top-custom-playlist {
@@ -713,8 +769,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 70vh;
-    background-image: linear-gradient(to top, black, #414756);
+    height: auto;
     justify-content: space-around;
     width: 100%;
 }
@@ -796,4 +851,13 @@ main {
         transition: background-color 0.3s ease;
         font-size: clamp(1rem, 2vw, 1.3rem);
     }
+    .header-container aside {
+        justify-content: space-between;
+    }
+    .header-container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        min-width: 2rem;
+    }
 }
+
