--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -36,18 +36,32 @@
   <h2 class="display-results">Search to display results!</h2>
 </section>
 <section class="curved"></section>
-<section class="curved2"></section>
 <section id="playlist-section">
-  <h1>Your playlist</h1>
-  <ul class="playlist-container">
-  </ul>
-  <h2 class="playlist-empty">Your playlist is empty</h2>
-  <div id="button-container">
+  <header class="header-container">
+    <aside>
+      <div class="info-box">
+        <h2 id="artists-n">0</h2>
+        <h3>Artists</h3>
+      </div>
+      <div class="info-box">
+        <h2 id="albums-n">0</h2>
+        <h3>Albums</h3>
+      </div>
+      <div class="info-box">
+        <h2 id="tracks-n">0</h2>
+        <h3>Tracks</h3>
+      </div>
+      <div class="info-box">
+        <h2 id="total-n">0</h2>
+        <h3>Total</h3>
+      </div>
+    </aside>
     <button id="generate-playlist-button" class="fancy-button">
       Generate playlist
     </button>
-  </div>
+  </header>
+  <ul class="playlist-container">
+  </ul>
 </section>
-<section class="curved black"></section>
 <script src="{% static 'js/create-playlist.js' %}"></script>
 {% endblock %}
