--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -356,7 +356,7 @@ body {
 
 /* CREATE PLAYLIST */
 #create-playlist {
-    min-height: 30rem;
+    min-height: 27rem;
     height: auto;
     width: 100%;
     display: flex;
@@ -368,6 +368,7 @@ body {
     border-bottom-left-radius: 50% 21%;
     border-bottom-right-radius: 50% 21%;
 }
+
 #create-playlist .container {
     display: grid;
     width: 95%;
@@ -508,11 +509,8 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 30rem;
-    height: 50vh;
-
-    margin: 1rem 0;
-    padding: 0 1rem;
+    min-height: auto;
+    margin: 4rem 0;
 }
 
 #playlist-section h1 {
@@ -546,10 +544,12 @@ h3 {
     min-width: 5.5rem;
     gap: 0.5rem;
 }
+
 .header-container aside .info-box h2 {
     font-weight: 400;
 
 }
+
 .header-container aside h3 {
     margin: 0;
     font-size: 90%;
@@ -564,8 +564,7 @@ h3 {
     gap: 5px;
     overflow-y: scroll;
     justify-content: flex-start;
-    height: auto;
-    min-height: 83px;
+    height: 249px;
     background-color: white;
     padding: 1rem;
     transition: height 0.2s ease-in-out;
@@ -577,19 +576,22 @@ h3 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 1.2rem;
-    width: auto;
+    font-size: 1.5rem;
+    width: 100%;
+    height: 100%;
     opacity: 0.7;
     font-weight: 700;
     transition: opacity 0.4s ease-in-out;
-    bottom: 68%;
+    top: 0;
+    left: 0;
+    z-index: 1;
     position: absolute;
-    z-index: 1000;
 }
 
-.empty-playlists.hide{
+.empty-playlists.hide {
     opacity: 0;
 }
+
 #generate-playlist-button {
     border: 0;
     background-color: var(--green);
@@ -627,6 +629,7 @@ h3 {
     gap: 15px;
     opacity: 0;
     transition: opacity 0.4s ease-in-out;
+    z-index: 4;
 }
 
 .playlist-container li.show {
@@ -898,6 +901,7 @@ main {
     #playlist-section h1 {
         text-align: center;
     }
+
     .header-container aside {
         justify-content: space-between;
     }
@@ -907,6 +911,7 @@ main {
         gap: 1rem;
         min-width: 2rem;
     }
+
     #create-playlist {
         min-height: 15rem;
         border-bottom-left-radius: 50% 11%;
